[project]
name = "artificial-inventiveness"
version = "0.1.0"
description = "Course materials for Artificial Inventiveness course (W10IME-SD0149L)"
authors = [
    { name = "Marek Piotr Mysior" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evaluate>=0.4.6",
    "instructor>=1.11.3",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "ollama>=0.6.0",
    "openai>=1.109.1",
    "pandas>=2.3.3",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "src"
module-root = ""
